--- a/circles.html
+++ b/circles.html
@@ -1,33 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./circles.css">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.2/paper-full.js"  
+    <script>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.0/howler.js"
+        integrity="sha256-PrKsBZiUEiwLG+it4CWjMZfZ4AkcWEd1NU46fZtGS5c=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.2/paper-full.js"
         integrity="sha256-0UCYTfEkQlxl7Fy99RM2kU+ScyrKrW005WKxkeu3To0=" crossorigin="anonymous"></script>
     <!-- Define inlined PaperScript associate it with myCanvas + making scope global so we don't
         have to keep writing paper.Path() or paper.view.draw()-->
     <script type="text/javascript">
-	    paper.install(window);
+        paper.install(window);
         //function to get paper set up on load
-	    window.onload = function() {
-		    paper.setup('myCanvas');
-		    //need to use tool.function and defining the event handler to use
-		    var tool = new Tool();
-		    // Define a mousedown handler
-		    tool.onMouseDown = function(event) {
-                //cannot use point * point because javascript cannot be overloaded
-                //we are using Paper.js point by point multiplication with canvas size limitations
-                var circlePoint = new Point(view.size.width, view.size.height).multiply(Point.random());
-                new Path.Circle(circlePoint, 10).fillColor = "green";
-		    }
-	    }
+        window.onload = function () {
+            paper.setup('myCanvas');
+            //need to use tool.function and defining the event handler to use
+            var tool = new Tool();
+            var keyCodes = {
+                //define a sound in Howl (needs src instead of url in new version)
+                q: {
+                    sound: new Howl({
+                        src: ['sounds/bubbles.mp3']
+                    }),
+                    color: '#1abc9c'
+                },
+                w: {
+                    sound: new Howl({
+                        src: ['sounds/clay.mp3']
+                    }),
+                    color: '#2ecc71'
+                },
+                e: {
+                    sound: new Howl({
+                        src: ['sounds/confetti.mp3']
+                    }),
+                    color: '#3498db'
+                },
+                r: {
+                    sound: new Howl({
+                        src: ['sounds/corona.mp3']
+                    }),
+                    color: '#9b59b6'
+                },
+                t: {
+                    sound: new Howl({
+                        src: ['sounds/dotted-spiral.mp3']
+                    }),
+                    color: '#34495e'
+                },
+                y: {
+                    sound: new Howl({
+                        src: ['sounds/flash-1.mp3']
+                    }),
+                    color: '#16a085'
+                },
+                u: {
+                    sound: new Howl({
+                        src: ['sounds/flash-2.mp3']
+                    }),
+                    color: '#27ae60'
+                },
+                i: {
+                    sound: new Howl({
+                        src: ['sounds/flash-3.mp3']
+                    }),
+                    color: '#2980b9'
+                },
+                o: {
+                    sound: new Howl({
+                        src: ['sounds/glimmer.mp3']
+                    }),
+                    color: '#8e44ad'
+                },
+                p: {
+                    sound: new Howl({
+                        src: ['sounds/moon.mp3']
+                    }),
+                    color: '#2c3e50'
+                },
+                a: {
+                    sound: new Howl({
+                        src: ['sounds/pinwheel.mp3']
+                    }),
+                    color: '#f1c40f'
+                },
+                s: {
+                    sound: new Howl({
+                        src: ['sounds/piston-1.mp3']
+                    }),
+                    color: '#e67e22'
+                },
+                d: {
+                    sound: new Howl({
+                        src: ['sounds/piston-2.mp3']
+                    }),
+                    color: '#e74c3c'
+                },
+                f: {
+                    sound: new Howl({
+                        src: ['sounds/prism-1.mp3']
+                    }),
+                    color: '#95a5a6'
+                },
+                g: {
+                    sound: new Howl({
+                        src: ['sounds/prism-2.mp3']
+                    }),
+                    color: '#f39c12'
+                },
+                h: {
+                    sound: new Howl({
+                        src: ['sounds/prism-3.mp3']
+                    }),
+                    color: '#d35400'
+                },
+                j: {
+                    sound: new Howl({
+                        src: ['sounds/splits.mp3']
+                    }),
+                    color: '#1abc9c'
+                },
+                k: {
+                    sound: new Howl({
+                        src: ['sounds/squiggle.mp3']
+                    }),
+                    color: '#2ecc71'
+                },
+                l: {
+                    sound: new Howl({
+                        src: ['sounds/strike.mp3']
+                    }),
+                    color: '#3498db'
+                },
+                z: {
+                    sound: new Howl({
+                        src: ['sounds/suspension.mp3']
+                    }),
+                    color: '#9b59b6'
+                },
+                x: {
+                    sound: new Howl({
+                        src: ['sounds/timer.mp3']
+                    }),
+                    color: '#34495e'
+                },
+                c: {
+                    sound: new Howl({
+                        src: ['sounds/ufo.mp3']
+                    }),
+                    color: '#16a085'
+                },
+                v: {
+                    sound: new Howl({
+                        src: ['sounds/veil.mp3']
+                    }),
+                    color: '#27ae60'
+                },
+                b: {
+                    sound: new Howl({
+                        src: ['sounds/wipe.mp3']
+                    }),
+                    color: '#2980b9'
+                },
+                n: {
+                    sound: new Howl({
+                        src: ['sounds/zig-zag.mp3']
+                    }),
+                    color: '#8e44ad'
+                },
+                m: {
+                    sound: new Howl({
+                        src: ['sounds/moon.mp3']
+                    }),
+                    color: '#2c3e50'
+                }
+            };
+            var circles = []; //empty array declaration
+
+            // Define a key down handler
+            tool.onKeyDown = function (event) {
+                //only play animation+sound if key is valid
+                if (keyCodes[event.key]) {
+                    //cannot use point * point because javascript cannot be overloaded
+                    //we are using Paper.js point by point multiplication with canvas size limitations
+                    var circlePoint = new Point(view.size.width, view.size.height).multiply(Point.random());
+                    var newCircle = new Path.Circle(circlePoint, 500);
+                    //needs to call fillColor on a separate line in order for hue func to work
+                    newCircle.fillColor = keyCodes[event.key].color;
+                    keyCodes[event.key].sound.play();
+                    circles.push(newCircle);
+                }
+            }
+
+            //using animation involves view.onFrame
+            view.onFrame = function (event) {
+
+                for (var i = 0; i < circles.length; i++) {
+                    //changes hue
+                    circles[i].fillColor.hue += 1;
+                    //shrink animation
+                    circles[i].scale(.9);
+                    //remove disappeared circles from array
+                    if (circles[i].area < 1) {
+                        circles[i].remove(); // remove the circle from the canvas
+                        circles.splice(i, 1); // remove the circle from the array
+                    }
+                }
+
+            }
+        }
 
     </script>
-    <title>Paptatap</title>
+    <title>Patatap</title>
 </head>
+
 <body>
     <canvas id="myCanvas" resize></canvas>
 </body>
+
 </html>
